# document_anonymisation

./: .gitignore  PUSH_INSTRUCTIONS.md  README.md  _fix_registry.py  _fix_visual.py  _patch_sweep.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_entities.example.yaml  seed_entities.mercedes.yaml
idp_anonymiser/: __init__.py  cli.py
idp_anonymiser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
idp_anonymiser/agent/: __init__.py  anonymisation_agent.py  state.py  workflow.py
idp_anonymiser/audit/: __init__.py  redaction_map.py  report.py
idp_anonymiser/detection/: __init__.py  canonical_registry.py  detector.py  entity_resolution.py  label_value_detector.py  presidio_detector.py  regex_recognisers.py  spacy_detector.py  table_detector.py
idp_anonymiser/document/: __init__.py  docx_extractor.py  layout_model.py  loader.py  pdf_extractor.py  text_extractor.py  type_detector.py  xlsx_extractor.py
idp_anonymiser/replacement/: __init__.py  address_generator.py  faker_provider.py  generator.py  id_generator.py  mapping_store.py  org_generator.py
idp_anonymiser/rewrite/: __init__.py  docx_rewriter.py  json_rewriter.py  pdf_rewriter.py  (+2 more)
sanitiser/: README.md  __init__.py  __main__.py  chunker.py  cli.py  config.py  document_loader.py  pipeline.py  state.py
tests/: test_audit_report.py  test_entity_resolution.py  test_regex_recognisers.py  test_replacement_generator.py  test_text_anonymisation.py
tests_sanitiser/: conftest.py  test_pipeline_text.py  test_regex.py  test_registry.py  test_resolver.py
(+29 files in other folders)
